fix gap on nav between tab and border-bottom

--- a/app/assets/stylesheets/views/users.css.scss
+++ b/app/assets/stylesheets/views/users.css.scss
@@ -125,7 +125,8 @@ html.users_activities {
     > li {
 
       &:first-child {
-        font-size: 20px;
+        font-size: 18px;
+        height: 32px;
         line-height: 20px;
         margin-left: 2px;
 
